@@ -35,6 +35,7 @@
 namespace Brainworxx\Krexx\Analyse\Caller;
 
 use Brainworxx\Krexx\Service\Factory\Pool;
+use Brainworxx\Krexx\Service\Misc\File;
 
 abstract class AbstractCaller
 {
@@ -44,6 +45,11 @@ abstract class AbstractCaller
      * @var Pool
      */
     protected $pool;
+
+    /**
+     * @var File
+     */
+    protected $fileService;
 
     /**
      * Pattern that we use to identify the caller.
@@ -65,6 +71,7 @@ abstract class AbstractCaller
     public function __construct(Pool $pool)
     {
         $this->pool = $pool;
+        $this->fileService = $pool->createClass('Brainworxx\\Krexx\\Service\\Misc\\File');
     }
 
     /**
@@ -90,35 +97,6 @@ abstract class AbstractCaller
     public function getPattern()
     {
         return $this->pattern;
-    }
-
-    /**
-     * We will remove the $_SERVER['DOCUMENT_ROOT'] from the absolute
-     * path of the calling file.
-     * Return the original path, in case we can not determine the
-     * $_SERVER['DOCUMENT_ROOT']
-     *
-     * @see Megento 2 extiosion, we use it to 'sanitize' the path to just saved
-     *   config file.
-     *
-     * @param $path
-     *   The path we want to filter
-     *
-     * @return string
-     *   The filtered path to the calling file.
-     */
-    public function filterFilePath($path)
-    {
-        // There may or may not be a trailing '/'.
-        // We remove it, just in case, to make sure that we remove the doc root
-        // completely from the $path variable.
-        $docRoot = rtrim($_SERVER['DOCUMENT_ROOT'], '/');
-        if (isset($docRoot) && strpos($path, $docRoot) === 0) {
-            // Found it on position 0.
-            $path = '. . ./' . substr($path, strlen($docRoot) + 1);
-        }
-
-        return $path;
     }
 
     /**
