@@ -247,4 +247,53 @@ class File
 
         return $timestamp;
     }
+
+    /**
+     * Tries to delete a file.
+     *
+     * @param string $filename
+     */
+    public function deleteFile($filename)
+    {
+        // Check if it is an actual file and if it is writeable.
+        if (is_file($filename)) {
+            set_error_handler(function () {
+                /* do nothing */
+            });
+            // Make sure it is unlinkable.
+            chmod($filename, 0777);
+            if (!unlink($filename)) {
+                // We have a permission problem here!
+                $this->pool->messages->addMessage('Unable to delete file: ' . $this->filterFilePath($filename));
+            }
+
+            restore_error_handler();
+        }
+    }
+
+    /**
+     * We will remove the $_SERVER['DOCUMENT_ROOT'] from the absolute
+     * path of the calling file.
+     * Return the original path, in case we can not determine the
+     * $_SERVER['DOCUMENT_ROOT']
+     *
+     * @param $path
+     *   The path we want to filter
+     *
+     * @return string
+     *   The filtered path to the calling file.
+     */
+    public function filterFilePath($path)
+    {
+        // There may or may not be a trailing '/'.
+        // We remove it, just in case, to make sure that we remove the doc root
+        // completely from the $path variable.
+        $docRoot = rtrim($_SERVER['DOCUMENT_ROOT'], '/');
+        if (isset($docRoot) && strpos($path, $docRoot) === 0) {
+            // Found it on position 0.
+            $path = '. . ./' . substr($path, strlen($docRoot) + 1);
+        }
+
+        return $path;
+    }
 }
