@@ -12,6 +12,8 @@
   object.
 - Bugfix: limit the preview of method analysis with a lot of
   parameters or long namespaces.
+- Bugfix: Removed a notice, in case krexx was called from normal
+  php and then again from a registered shutdown function.
 
 2.2.0
 - Added more search pattern and source code parsing to the
